--- a/styles/platform/GroupCall.module.css
+++ b/styles/platform/GroupCall.module.css
@@ -3,7 +3,7 @@
   color: rgb(255, 255, 255);
 }
 .groupcallPage{
-  height: 100vh;
+  height: 100%;
 
   display: flex;
   flex-direction: column;
