--- a/styles/platform/VideoChat.module.css
+++ b/styles/platform/VideoChat.module.css
@@ -3,7 +3,7 @@
   color: rgb(255, 255, 255);
 }
 .videochatPage{
-  height: 100vh;
+  height: 100%;
 
 
   display: flex;
