--- a/styles/platform/Whiteboard.module.css
+++ b/styles/platform/Whiteboard.module.css
@@ -4,7 +4,7 @@
 }
 
 .whiteboardPage{
-  height: 100vh;
+  height: 100%;
 
   display: flex;
   flex-direction: column;
